# runix-decision-engine

./: .gitignore  Makefile  README.md  pyproject.toml
app/: dashboard.py
data/: Runix_Logistics_Engine_Scenario_Dataset.xlsx
docs/: DATA_NOTES.md  DECISION_LOGIC.md
src/runix/: __init__.py  __main__.py  alert.py  baselines.py  capacity.py  cli.py  config.py  data_loader.py  decision.py  logging_setup.py  models.py  narrative.py  pipeline.py  risk.py  sensitivity.py
tests/: conftest.py  test_alert.py  test_baselines.py  test_capacity.py  test_data_loader.py  test_decision.py  test_pipeline_golden.py  test_risk.py  test_sensitivity.py
